--- a/pbem/email_template_next_turn.html
+++ b/pbem/email_template_next_turn.html
@@ -3,7 +3,7 @@
 
 <div style="width: 650px; border: 1px solid black; background-color: white;">
 <div style="background-color: #003876; min-height: 20px; padding: 3px; margin: 0px;">
-<span style="font-size: 200%;"><a href="https://play.freeciv.org" style="color: white;">Freeciv-web</a></>
+<span style="font-size: 200%;"><a href="https://{host}" style="color: white;">Freeciv-web</a></span>
 </div>
 <div>
 To {player_name} 
@@ -19,15 +19,13 @@ Turn: {turn}
 <br><br>
 
 Please complete your turn within 7 days, the other player will be waiting for you. A friendly reminder will be sent when there is 1 day until the game expires.
-You can always check the game status on the <a href="https://play.freeciv.org/meta/metaserver">metaserver</a>. 
+You can always check the game status on the <a href="https://{host}/meta/metaserver">metaserver</a>.
 
 <br><br>
 
-<a href="https://play.freeciv.org">Freeciv-web</a> is a free and open source empire-building strategy game
+<a href="https://{host}">Freeciv-web</a> is a free and open source empire-building strategy game
 inspired by the history of human civilization. Please report feedback on the <a href="http://forum.freeciv.org/f/viewforum.php?f=24">forum</a>.
 <br><br>
-
-The Freeciv-web project - <a href="https://play.freeciv.org">play.freeciv.org</a><br><br>
 
 </div>
 </div>
